[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peakrdl-html"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "systemrdl-compiler ~= 1.31",
    "Jinja2 >= 2.9",
    "markdown",
    "git-me-the-url >= 2.0.3",
    "python-markdown-math",
]

authors = [
    {name="Alex Mykyta"},
]
description = "HTML documentation generator for SystemRDL-based register models"
readme = "README.md"
license = {text = "LGPLv3"}
keywords = [
    "SystemRDL", "PeakRDL", "CSR", "compiler", "tool", "registers", "generator",
    "HTML", "documentation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
cli = [
    "peakrdl-cli >= 1.2.3",
]

[project.urls]
Source = "https://github.com/SystemRDL/PeakRDL-html"
Tracker = "https://github.com/SystemRDL/PeakRDL-html/issues"
Changelog = "https://github.com/SystemRDL/PeakRDL-html/releases"

[tool.setuptools.dynamic]
version = {attr = "peakrdl_html.__about__.__version__"}

[project.entry-points."peakrdl.exporters"]
html = "peakrdl_html.__peakrdl__:Exporter"
